--- a/webdev/mern/mern-app/backend/package.json
+++ b/webdev/mern/mern-app/backend/package.json
@@ -6,9 +6,10 @@
       "start": "node server.js"
     },
     "dependencies": {
+      "axios": "^0.21.1",
+      "dotenv": "^8.2.0",
       "express": "^4.17.1",
-      "mongoose": "^5.12.3",
-      "dotenv": "^8.2.0"
+      "mongoose": "^5.12.3"
     }
   }
   
