--- a/webdev/mern/mern-app/backend/package.json
+++ b/webdev/mern/mern-app/backend/package.json
@@ -9,7 +9,8 @@
       "axios": "^0.21.1",
       "dotenv": "^8.2.0",
       "express": "^4.17.1",
-      "mongoose": "^5.12.3"
+      "mongoose": "^5.12.3",
+      "cors": "^2.8.5"
     }
   }
   
