--- a/webdev/mern/mern-app/frontend/package.json
+++ b/webdev/mern/mern-app/frontend/package.json
@@ -7,6 +7,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-router-dom": "^5.2.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "react-table": "^7.7.0",
