--- a/webdev/mern/mern-app/frontend/package.json
+++ b/webdev/mern/mern-app/frontend/package.json
@@ -3,15 +3,17 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.5",
+    "@mui/styles": "^5.2.5",
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
     "react-router-dom": "^5.2.0",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "react-table": "^7.7.0",
-    "react-csv": "^2.0.3"
+    "react-scripts": "4.0.3",
+    "react-hook-form": "^7.15.3"
   },
   "scripts": {
     "start": "react-scripts start",
